# StravaApi

./: .gitignore  README.md
client/: package-lock.json  package.json
client/public/: index.html
client/public/css/: maplibre-gl.css
client/public/lib/: maplibre-gl.js
client/src/: App.css  App.js  Cluster.css  Cluster.js  HeatMap.js  HomeButton.css  HomeButton.js  InterestPoints.js  InterestPointsMarker.css  InterestPointsMarker.js  Layers.js  Map.css  Map.js  MultiMenus.js  Paths.css  Paths.js  index.js
geoclassifier/: CMakeLists.txt
geoclassifier/src/: ClustersBuilder.cpp  ClustersBuilder.h  library.cpp  library.h
geoclassifier/src/GraphAlgorithms/: GraphDivider.cpp  GraphDivider.h  QuadTree.cpp  QuadTree.h  QuadTreeBuilder.cpp  QuadTreeBuilder.h  SimpleQuadTree.cpp  SimpleQuadTree.h  SpanTreeBuilder.cpp  SpanTreeBuilder.h  delaunay.cpp  delaunay.h  edge.cpp  edge.h  numeric.h  triangle.cpp  triangle.h  utils.h  vector2.cpp  vector2.h
geoclassifier/src/dataStructs/: ClusterData.cpp  ClusterData.h  ClustersData.cpp  ClustersData.h  PointData.cpp  PointData.h
geoclassifier/src/sql/: PGConnection.cpp  PGConnection.h
qml-map/: CMakeLists.txt  main.cpp
server/: Dockerfile  config.py  prerun.sh  requirements.txt
server/app/: __init__.py
server/app/interest_points/: __init__.py  models.py  routes.py
server/app/paths/: __init__.py  models.py  routes.py
server/shared_misc/: ctypes_matrix.py  json_node_detour.py
